# DynamicsAgents-Agente-Diagramador

./: .env  AGENTS.md  agent.py  conftest.py  pytest.ini  requirements-dev.txt  requirements-sample-references.txt  requirements.txt  sitecustomize.py
agents/: __init__.py
google/: __init__.py
solution-only-sample-references/: agent.py  prompt.py  (+2 more)
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/: .env  .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/.github/workflows/: ci.yml  release.yml
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/dynamic_agents/: __init__.py  __main__.py  runtime.py  yaml_loader.py
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/dynamic_agents/template_samples/: __init__.py  workflow.yaml
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/scripts/: sync_version.py
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/tests/: conftest.py  test_version.py
solution-only-sample-references/solution Diagramador/.vendor/dynamics-agents/source/tests/runtime/: test_bootstrap_helpers.py  test_dynamic_agent_runtime.py
solution-only-sample-references/solution Diagramador/agents/diagramador/: pyproject.toml  pytest.ini
solution-only-sample-references/solution Diagramador/agents/diagramador/app/: __init__.py  runtime.yaml  settings.py  workflow.yaml
solution-only-sample-references/solution Diagramador/agents/diagramador/app/agents/: __init__.py
solution-only-sample-references/solution Diagramador/agents/diagramador/app/agents/acronym_lookup_agent/: workflow.yaml
solution-only-sample-references/solution Diagramador/agents/diagramador/app/outputs/C4-Model/: diagrama_container_20251020_183710.xml  diagrama_container_20251020_185957.xml  diagrama_container_20251020_191355.xml  diagrama_container_20251020_193001.xml  diagrama_container_20251020_193517.xml  diagrama_container_20251020_194015.xml  diagrama_container_20251020_200508.xml  diagrama_container_20251020_201114.xml  diagrama_container_20251020_202307.xml  diagrama_container_20251020_203817.xml  diagrama_container_20251020_204826.xml  diagrama_container_20251020_210708.xml  diagrama_container_20251020_215742.xml  diagrama_container_20251021_074854.xml  diagrama_container_20251021_090650.xml  diagrama_container_20251021_094333.xml  diagrama_container_20251021_133726.xml  diagrama_container_20251021_135328.xml  diagrama_container_20251021_140227.xml  diagrama_container_20251021_142406.xml  diagrama_container_20251021_144720.xml  diagrama_container_20251021_145057.xml  diagrama_container_20251021_150550.xml  diagrama_container_20251022_142821.xml  diagrama_container_20251022_145605.xml  diagrama_container_20251022_152739.xml  diagrama_container_20251023_083241.xml  diagrama_container_20251023_083725.xml  diagrama_container_20251023_084954.xml  diagrama_container_20251023_085211.xml  diagrama_container_20251023_085954.xml  diagrama_container_20251023_091515.xml  diagrama_container_20251023_100209.xml  diagrama_container_20251023_103512.xml  diagrama_container_20251023_104020.xml  diagrama_container_20251024_084703.xml  diagrama_container_20251024_115121.xml  diagrama_context_20251023_102636.xml  diagrama_context_20251024_085319.xml  diagrama_context_20251024_101140.xml  (+3 more)
solution-only-sample-references/solution Diagramador/agents/diagramador/app/templates/C4-Model/: layout_sdlc.xml
solution-only-sample-references/solution Diagramador/agents/diagramador/deployment/: README.md
solution-only-sample-references/solution Diagramador/agents/diagramador/deployment/terraform/: storage.tf  variables.tf
solution-only-sample-references/solution Diagramador/agents/diagramador/deployment/terraform/dev/: variables.tf
solution-only-sample-references/solution Diagramador/agents/diagramador/tests/: conftest.py  test_acronym_lookup_tool.py  test_acronym_siglas_callback.py  test_confirmation_callback.py  test_confirmation_handler.py  test_confirmation_state_callback.py  test_diagram_generator_tool.py  test_diagram_preferences_callback.py  test_quality_validator_tool.py  test_settings.py
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/: .coveragerc  GEMINI.md  Makefile  README.md  pyproject.toml  requirements.txt  test_corrections.py  test_final_fix.py  test_gcs_upload.py
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/: __init__.py  adk_config.yaml  adk_patch.py  agent.py  agent_engine_app.py  callback.py  prompt.py  requirements.txt
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/config/: __init__.py  adk_config.yaml.backup  mapping.yml  vocabulary.yml
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/metamodel/: metamodel_validator.py  metamodelo.xml
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/samples/: JT-170011 - [CDB] - CDB com Garantias - Aplicação 1.xml  acronyms_database.csv
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/tools/: __init__.py  config_manager.py  diagram_service.py
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/app/utils/: gcs.py  local_download.py  logging_toggle.py  tracing.py  typing.py
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/deployment/: README.md
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/deployment/terraform/: github.tf  service_accounts.tf  variables.tf
solution-only-sample-references/solution Diagramador/old-diagramador-solution/agents/diagramador/tests/: README.md  conftest.py  requirements.txt  run_tests.py
(+356 files in other folders)
